bisa cetak invoice

--- a/E-Commerce_MultiTenant/Views/Produk/Index.cshtml
+++ b/E-Commerce_MultiTenant/Views/Produk/Index.cshtml
@@ -48,13 +48,13 @@
                     if (item.kategori == "pakaian")
                     {
                         <p>
-                            <button class="btn btn-primary" onclick="location.href='@Url.Action("CreatePesananPakaian","Produk")/?id_produk=@item.id_produk'">Pesan</button>
+                            <button class="btn btn-success hvr-grow" onclick="location.href='@Url.Action("CreatePesananPakaian","Produk")/?id_produk=@item.id_produk'">Pesan</button>
                         </p>
                     }
                     else if (item.kategori != "pakaian")
                     {
                         <p>
-                            <input type="button" value="Pesan" onclick="location.href='@Url.Action("CreatePesananNonPakaian", "Produk")/?id_produk=' + @item.id_produk" class="btn btn-success" />
+                            <input type="button" value="Pesan" onclick="location.href='@Url.Action("CreatePesananNonPakaian", "Produk")/?id_produk=' + @item.id_produk" class="btn btn-success hvr-grow" />
                         </p>
                     }
                 }
