--- a/E-Commerce_MultiTenant/Views/Home/Indexku.cshtml
+++ b/E-Commerce_MultiTenant/Views/Home/Indexku.cshtml
@@ -44,39 +44,45 @@
             <span class="sr-only">Next</span>
         </a>
     </div>
-</div>
-@*<div class="jumbotron">
-        @if (Session["nama_perusahaan"] == null)
-        {
-            <h1>Nama Kosong</h1>
-        }
-        else
-        {
-            <h1>@Session["nama_perusahaan"].ToString()</h1>
-        }
 
-        <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-        <p><a href="" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <div class="container">
+        <br />
+        <hr />
+        <div class="col-md-4 col-xs-4">
+            <h3 style="text-align:center">@ViewBag.namaproduk1</h3>
+            <div class="thumbnail">
+                <img src="http://localhost:52494/Content/Images/@ViewBag.fotoproduk1" style="min-height:200px;height:200px;" />
+            </div>
+        </div>
+        <div class="col-md-4 col-xs-4">
+            <h3 style="text-align:center">@ViewBag.namaproduk2</h3>
+            <div class="thumbnail">
+                <img src="http://localhost:52494/Content/Images/@ViewBag.fotoproduk2" style="min-height:200px;height:200px;" />
+            </div>
+        </div>
+        <div class="col-md-4 col-xs-4">
+            <h3 style="text-align:center">@ViewBag.namaproduk3</h3>
+            <div class="thumbnail">
+                <img src="http://localhost:52494/Content/Images/@ViewBag.fotoproduk3" style="min-height:200px;height:200px;" />
+            </div>
+        </div>
+        <div class="col-md-4 col-xs-4">
+            <h3 style="text-align:center">@ViewBag.namaproduk4</h3>
+            <div class="thumbnail">
+                <img src="http://localhost:52494/Content/Images/@ViewBag.fotoproduk4" style="min-height:200px;height:200px;" />
+            </div>
+        </div>
+        <div class="col-md-4 col-xs-4">
+            <h3 style="text-align:center">@ViewBag.namaproduk5</h3>
+            <div class="thumbnail">
+                <img src="http://localhost:52494/Content/Images/@ViewBag.fotoproduk5" style="min-height:200px;height:200px;" />
+            </div>
+        </div>
+        <div class="col-md-4 col-xs-4">
+            <h3 style="text-align:center">@ViewBag.namaproduk6</h3>
+            <div class="thumbnail">
+                <img src="http://localhost:52494/Content/Images/@ViewBag.fotoproduk6" style="min-height:200px;height:200px;" />
+            </div>
+        </div>
     </div>
-
-    <div class="row">
-        <div class="col-md-4">
-            <h2>Getting started</h2>
-            <p>
-                ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-                enables a clean separation of concerns and gives you full control over markup
-                for enjoyable, agile development.
-            </p>
-            <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-        </div>
-        <div class="col-md-4">
-            <h2>Get more libraries</h2>
-            <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-            <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-        </div>
-        <div class="col-md-4">
-            <h2>Web Hosting</h2>
-            <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-            <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-        </div>
-    </div>*@
+</div>
