--- a/E-Commerce_MultiTenant/Views/Shared/_LoginPartial.cshtml
+++ b/E-Commerce_MultiTenant/Views/Shared/_LoginPartial.cshtml
@@ -8,20 +8,20 @@
         @Html.AntiForgeryToken()
 
         <ul class="nav navbar-nav navbar-right">
-            <li>
+            <li  class="hvr-pop">
                 <a href="~/ShoppingCart/ShowCart" style="color:white"><span class="glyphicon glyphicon-shopping-cart"></span></a>
             </li>
-            <li>
+            <li  class="hvr-pop">
                 @Html.ActionLink("Hello " + Session["user"].ToString() + "!", "Indexku", "Home", null, new { @style = "color:white;font-family:'Roboto'" })
             </li>
-            <li><a style="color:white;font-family:'Roboto'" href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
+            <li  class="hvr-pop"><a style="color:white;font-family:'Roboto'" href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
         </ul>
     }
 }
 else
 {
     <ul class="nav navbar-nav navbar-right">
-        <li style="color:white">@Html.ActionLink("Daftar", "Create", "Home", null, new { @style = "color:white;font-family:'Roboto'" })</li>
-        <li style="color:white">@Html.ActionLink("Log in", "Login", "Home",null, new { @style = "color:white;font-family:'Roboto'" })</li>
+        <li style="color:white" class="hvr-pop">@Html.ActionLink("Daftar", "Create", "Home", null, new { @style = "color:white;font-family:'Roboto'" })</li>
+        <li style="color:white" class="hvr-pop">@Html.ActionLink("Log in", "Login", "Home",null, new { @style = "color:white;font-family:'Roboto'" })</li>
     </ul>
 }
