--- a/Pendaftaran_Tenant/Views/Penyewa/CreateKaryawan2.cshtml
+++ b/Pendaftaran_Tenant/Views/Penyewa/CreateKaryawan2.cshtml
@@ -17,7 +17,7 @@
 
     <div class="col-md-6 col-xs-6">
         <div class="thumbnail clearfix text-center" style="max-width:500px;width:100%;margin-left:10%">
-            @using (Html.BeginForm())
+            @using (Html.BeginForm("CreateKaryawan2", "Penyewa"))
             {
                 @Html.AntiForgeryToken()
 
