--- a/E-Commerce_MultiTenant/Views/ShoppingCart/ShowCart.cshtml
+++ b/E-Commerce_MultiTenant/Views/ShoppingCart/ShowCart.cshtml
@@ -75,7 +75,7 @@
 
     </table>
     <div class="text-center">
-        @Html.ActionLink("Cetak Invoice", "Invoice", "ShoppingCart", null, new { onclick = "return confirm('Anda yakin sudah selesai melakukan pemesanan? Data keranjang belanja akan kosong setelah invoice dicetak')", @class = "btn btn-primary hvr-grow" })
+        @Html.ActionLink("Cetak Invoice", "KonfirmasiKirim", "ShoppingCart", null, new { onclick = "return confirm('Anda yakin sudah selesai melakukan pemesanan? Data keranjang belanja akan kosong setelah invoice dicetak')", @class = "btn btn-primary hvr-grow" })
 
     </div>
 </div>
